# pipes-extended

./: README.md  pipes-extended.cabal
src/Pipes/: Extended.hs  Getter.hs  Monoid.hs
