name:                pipes-extended
version:             0.1.0.0
synopsis:            Pipes with batteries included.
license:             MIT
license-file:        LICENSE
author:              Tony Day
maintainer:          tonyday567@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Pipes.Extended
                     , Pipes.Monoid
                     , Pipes.Getter
  build-depends:       base >=4.6 && <4.8
                     , attoparsec 
                     , bytestring 
                     , containers 
                     , contravariant 
                     , lens 
                     , managed 
                     , pipes 
                     , pipes-attoparsec 
                     , pipes-binary 
                     , pipes-bytestring 
                     , pipes-csv 
                     , pipes-group
                     , pipes-network 
                     , pipes-parse 
                     , pipes-safe 
                     , transformers 

  hs-source-dirs:      src    
  default-language:    Haskell2010